[package]
name = "blinky"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }

cortex-m-rt = "0.7"
stm32f7xx-hal = { version = "0.7", features = ["stm32f767", "rt"] }
panic-probe = { version = "0.3", features = ["print-rtt"] }
defmt = "0.3"
defmt-rtt = "0.4"
fugit = "0.3.9"
cortex-m-semihosting = "0.5.0"
